--- a/single_project_light.html
+++ b/single_project_light.html
@@ -101,7 +101,7 @@
 								<ul>
 									<li><i class="fa fa-user"></i><b>Client: </b>Google, Inc</li>
 									<li><i class="fa fa-clock-o"></i><b>Date: </b>10 Dec, 2021</li>
-									<li><i class="fa fa-folder"></i><b>Category: </b><a href="#">Web Design</a></li>
+									<li><i class="fa fa-folder"></i><b>Category: </b><a href="#">Architecture</a></li>
 									<li><i class="fa fa-folder"></i><b>Project Url: </b><a href="#">www.google.com</a></li>
 								</ul>
 							</div>
