--- a/index.html
+++ b/index.html
@@ -62,6 +62,32 @@
 					<li class="nav-item"> <a class="nav-link" href="#service">Services</a></li>
 					<li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+					<li class="nav-item dropdown">
+						<!-- Enlace que dispara el dropdown -->
+						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" role="button" 
+						   data-bs-toggle="dropdown" aria-expanded="false">
+						  <i class="fa fa-globe"></i> <!-- Ícono de globo (Font Awesome) -->
+						</a>
+						
+						<!-- Contenedor del dropdown -->
+						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="langDropdown">
+						  <!-- Opción Español -->
+						  <li>
+							<a class="dropdown-item" href="index_es.html">
+							  <!-- Opcionalmente una banderita -->
+							  <!-- <img src="assets/img/flags/es.png" alt="ES" style="width:20px; margin-right:5px;"> -->
+							  🇪🇸
+							</a>
+						  </li>
+						  <!-- Opción Inglés -->
+						  <li>
+							<a class="dropdown-item" href="index_en.html">
+							  <!-- <img src="assets/img/flags/en.png" alt="EN" style="width:20px; margin-right:5px;"> -->
+							  🇺🇸
+							</a>
+						  </li>
+						</ul>
+					  </li>
 				</ul><!--END NAVBAR NAV-->
 			</div><!--END COLLAPSE-->
 		</div><!--END CONTAINER -->
