--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 	<!-- END SERVICE -->	
 
 	<!-- START FUNFACT -->
-	<section data-stellar-background-ratio="0.3" id="funfact" class="funfact_area counter_feature section-padding" style="background-image: url(assets/img/counter-bg2.jpg);  background-size:cover; background-position: center center;">
+	<section data-stellar-background-ratio="0.3" id="funfact" class="funfact_area counter_feature section-padding" style="background-image: url(assets/img/bg2.jpg);  background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row text-center">					
 				<!-- <div class="col-lg-3 col-sm-6 col-xs-12 no-padding wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
@@ -458,11 +458,6 @@
 							<div class="address_br"><span class="ti-email"></span></div>
 							<h4>Email</h4>
 							<p>example@example.com</p>
-						</div>
-						<div class="single_address">
-							<div class="address_br"><span class="ti-location-pin"></span></div>
-							<h4>Working Hours</h4>
-							<p>Mon to Sat 9:00am to 5:00pm</p>
 						</div>
 					</div>
 				</div><!-- END COL  -->					
